# lenti

./: CMakeLists.txt  README.md
run/: bootx64.efi  test.sh
src/: entry.cpp
src/core/: Core.cpp  Core.h  config.h
src/service/config/: Config.cpp  Config.h
src/service/filesystem/: Filesystem.cpp  Filesystem.h
src/service/output/: Output.cpp  Output.h  colors.h
src/shared/: uefi.cpp  uefi.h
